2010-12-02  Ben Abbott <bpabbott@mac.com>

	* plot/contour3.m: Modify demo to avoid clipping mesh.
	* plot/fill.m: Allow multiple filled polygons.
	* plot/subplot.m: Add suppport for "align" and "replace" options.

2010-11-26  John W. Eaton  <jwe@octave.org>

	* pkg/pkg.m: Append directories to EXEC_PATH instead of
	prepending them.  Use pathsep instead of ":".

	* miscellaneous/copyfile.m, miscellaneous/movefile.m,
	miscellaneous/ls_command.m, plot/__print_parse_opts__.m:
	Search PATH for programs, not EXEC_PATH.

	* plot/print.m: Refer to PATH, not EXEC_PATH in error messages.
	* plot/__print_parse_opts__.m: Likewise.

2010-11-25  Kai Habel  <kai.habel@gmx.de>

	* (plot/uimenu.m): Simplify code, add further check.
	* (plot/uigetdir.m, plot/uigetfile.m, plot/uiputfile.m): Fix error messages.

2010-11-25  John W. Eaton  <jwe@octave.org>

	* time/datetick.m: Add missing semicolon.

2010-11-21  Rik  <octave@nomad.inbox5.com>

	* optimization/sqp.m: Use correct stopping tolerance in documentation.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* (plot/uigetdir.m, plot/private/__fltk_file_filter__.m:): Check if
	file argument is a valid path, don't use fileparts in this case.

2010-11-21  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Fix plot titles so they are visible for
	gnuplot 4.4.x (31711).
	* general/cell2mat.m: Return empty matrix for empty cell.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* (plot/uigetfile.m, plot/uiputfile.m): Set default directory to pwd.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* plot/uigetdir.m, plot/uigetfile.m, plot/uiputfile.m,
	plot/private/__fltk_file_filter__.m: New files.
	* plot/module.mk: Add new files.
	* miscellaneous/unimplemented.m: Remove uigetdir.m, uigetfile.m,
	and uiputfile.m from list of unimplemented functions.

2010-11-20  Rik  <octave@nomad.inbox5.com>

	* plot/gnuplot_drawnow.m: Remove spurious line causing 'ans=1' to be
	returned when printing plots.

2010-11-19  Ben Abbott  <bpabbott@mac.com>
